--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" href="icon.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="/src/index.css" rel="stylesheet">
-  <title>Vite + React</title>
+  <title>AutoCode</title>
 </head>
 
 <body>
